components/platform/platform-security/cilium-baseline/base/baseline-ccnp.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: zylos-baseline-ccnp
spec:
  endpointSelector:
    matchExpressions:
      - key: "k8s:io.kubernetes.pod.namespace"
        operator: NotIn
        values:
          - kube-system
          - argocd
          - istio-system
          - sealed-secrets
  ingress:
    - fromCIDR:
        - "169.254.7.127/32"
        - "fd16:9254:7127:1337:ffff:ffff:ffff:ffff/128"

    - toPorts:
        - ports:
            - port: "15008"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY

    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": observability
            "k8s:app.kubernetes.io/name": opentelemetry-collector
      toPorts:
        - ports:
            - port: "4317" # OTLP gRPC
              protocol: TCP
            - port: "4318" # OTLP HTTP
              protocol: TCP
